지도 API 다중마커 수정

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -82,6 +82,10 @@
     var teriaaddr = cafeteriaData[5];
     var cafeaddr = cafeData[5];
     var locationaddr = [paddr,teriaaddr, cafeaddr];
+
+    console.log(playData[4]);
+    console.log(cafeteriaData[5]);
+    console.log(cafeData[5]);
     /* 여기까지 */
 
     function searchAddressToCoordinate(address) {
