--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -74,19 +74,15 @@
         }
     }
 
-    console.log(playData);
-    console.log(cafeteriaData);
-    console.log(cafeData);
-
     var paddr = playData[4];
     var teriaaddr = cafeteriaData[5];
     var cafeaddr = cafeData[5];
     var locationaddr = [paddr,teriaaddr, cafeaddr];
 
-    console.log(playData[4]);
-    console.log(cafeteriaData[5]);
-    console.log(cafeData[5]);
     /* 여기까지 */
+
+    const result_x = [];
+    const result_y = [];
 
     function searchAddressToCoordinate(address) {
         naver.maps.Service.geocode({
@@ -98,12 +94,11 @@
                 }
                 return alert('Geocode Error, address:' + address);
             }
-            // if (response.v2.meta.totalCount === 0) {
-            //     return alert('No result.');
-            // }
             var htmlAddresses = [],
                 item = response.v2.addresses[0],
                 point = new naver.maps.Point(item.x, item.y);
+                result_x.push(point.x);
+                result_y.push(point.y);
 
             var marker = new naver.maps.Marker({ //마커 생성
                 map: map,
@@ -111,64 +106,13 @@
             });
         });
     }
-
-/*    function initGeocoder() { //좌표 구하는 기능
-        var latlng = map.getCenter(); // 위/경도 구하기
-        var utmk = naver.maps.TransCoord.fromLatLngToUTMK(latlng); // 위/경도 -> UTMK
-        var tm128 = naver.maps.TransCoord.fromUTMKToTM128(utmk);   // UTMK -> TM128
-        var naverCoord = naver.maps.TransCoord.fromTM128ToNaver(tm128); // TM128 -> NAVER
-
-        infoWindow = new naver.maps.InfoWindow({
-            content: ''
-        });
-
-    }*/
-
     for(var i=0; i<locationaddr.length; i++) {
         searchAddressToCoordinate(locationaddr[i]);
     }
 
-/*    naver.maps.onJSContentLoaded = initGeocoder;*/
-
-    /* 네이버 지도 API */
-    var mapOptions = { //지도 옵션 설정
-        center: new naver.maps.LatLng(37.4490704, 126.657250),
-        disableKineticPan: false,
-        zoom: 17
-    };
-    var map = new naver.maps.Map('map', mapOptions); //지도 생성
-
-    var marker = new naver.maps.Marker({ //마커 표시
-        position: new naver.maps.LatLng(37.4490704, 126.657250),
-        map: map,
-    });
-
-    naver.maps.Event.addListener(map, 'click', function (e) { //클릭한 지점으로 마커 옮기기
-        marker.setPosition(e.coord);
-    });
-
-    var contentString = [ //정보창의 내용 (차후 수정)
-        '<div class="iw_inner">',
-        '   <h3>인하공업전문대학 7호관</h3>',
-        '   <p>인천광역시 미추홀구 소성로 71<br>',
-        '       <br>',
-        '       <a href="https://www.inhatc.ac.kr/" target="_blank">www.inhatc.ac.kr</a>',
-        '   </p>',
-        '</div>'
-    ].join('');
-
-    var infowindow = new naver.maps.InfoWindow({ //정보창 객체 생성
-        content: contentString
-    });
-
-    naver.maps.Event.addListener(marker, "click", function (e) { //클릭할때마다 정보창 열고 닫기
-        if (infowindow.getMap()) {
-            infowindow.close();
-        } else {
-            infowindow.open(map, marker);
-        }
-    });
-
+    setTimeout(() => {
+        console.log(result_x[0])
+    }, 1000)
 
     $(function () {
         /* navBar hover 이벤트 */
