--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -2,22 +2,41 @@
 
 *{margin: 0; padding: 0; font-family: 'HGGGothicssi_40';}
 
-body{height: 100vh;}
+body{height: 100vh; overflow: hidden;}
 
 .mainWrap{}
 .mainWrap .flexWrap{display: flex;}
 .mainWrap .flexWrap header{display: inline-block; width:10%; height: 100vh; background: linear-gradient(0deg, rgba(242,212,5,1) 0%, rgba(242,159,5,1) 100%); text-align: center;}
-.mainWrap .flexWrap header img{display: inline-block; width: 100px; padding: 20px 0 0 0; margin: 0 0 20px 0;}
+.mainWrap .flexWrap header img{display: inline-block; width: 100px; padding: 20px 0 0 0; margin: 0 0 20px 0; margin-bottom: 30%;}
 .mainWrap .flexWrap header img:hover{}
 .mainWrap .flexWrap header nav{}
 .mainWrap .flexWrap header nav ul{}
 .mainWrap .flexWrap header nav ul li, .mainWrap .flexWrap footer ul li{font-size: 1.5em; font-weight: 600; padding: 3vh 0; transition: 0.5s; color: var(--color-aliceBlue);}
+.mainWrap .flexWrap header nav ul li{padding: 4vh 0;}
 .mainWrap .flexWrap header nav ul li:hover{background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); color: black; font-size: 1.7em;}
 
 .mainWrap .flexWrap section{display: inline-block; height: 100vh; width: 80%; position: relative;}
 
 .mainWrap .flexWrap section article:nth-of-type(2){display: none;}
-.mainWrap .flexWrap section article:nth-of-type(3){display: none;}
+.mainWrap .flexWrap section article:nth-of-type(2).active{display: inline-block; position: absolute; left: 10px; top: 30%;}
+.mainWrap .flexWrap section article:nth-of-type(2) .art2Wrap{
+    font-size: 1.5em;
+    font-weight: 800;
+    width: 400px; height:500px;
+    background-color: rgba(255, 255, 255, 0.7);
+    text-align: center;
+    border-radius: 25px;
+}
+.mainWrap .flexWrap section article:nth-of-type(2) .art2Wrap .part{
+    margin: 20px 0;
+}
+
+.art2Wrap div:nth-of-type(1){font-size: 1.75em; margin-bottom: 30px; padding: 20px 0; background-color: var(--color-mainOrange); border-radius:25px 25px 0 0; color: var(--color-aliceBlue);}
+.art2Wrap div:nth-of-type(2){margin: 10px 0; color: var(--color-darkOrange);}
+.art2Wrap div:nth-of-type(4){margin: 10px 0; color: var(--color-darkOrange);}
+.art2Wrap div:nth-of-type(6){margin: 10px 0; color: var(--color-darkOrange);}
+.art2Wrap div:nth-of-type(8){margin: 10px 0; color: var(--color-darkOrange);}
+
 
 .mainWrap .flexWrap footer{width: 10%; height: 100vh; background: linear-gradient(0deg, rgba(242,212,5,1) 0%, rgba(242,159,5,1) 100%); text-align: center;}
 .mainWrap .flexWrap footer ul{list-style: none;}
